--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ jwt.expiration=2592000
 jwt.route.authentication.path=/auth
 jwt.route.authentication.refresh=/refresh
 pwd=$2a$10$kS39QEY4CBhMPfH3UL3ZWOt/5OsDKLvk07/a5nlCnQy9JIxE7KajS
+
+portal.pa.ca.request.url=http://54.254.171.4:8880/api/evs-ca-request
