--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #EVS
 evs.pa.data.folder=/home/evs-data
-evs.pa.mqtt.address=ssl://localhost:7773
+evs.pa.mqtt.address=ssl://3.1.87.138:8883
 evs.pa.subscribe.topic=evs/pa/data
 evs.pa.ftp.folder=/home/henry
 evs.pa.ftp.host=18.141.139.25
