--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #EVS
 evs.pa.data.folder=/home/evs-data
 evs.pa.mqtt.address=ssl://3.1.87.138:8883
-evs.pa.subscribe.topic=evs/pa/data
+evs.pa.subscribe.send.topic=evs/pa/data
+evs.pa.subscribe.resp.topic=evs/pa/resp
 evs.pa.ftp.folder=/home/henry
 evs.pa.ftp.host=18.141.139.25
 evs.pa.ftp.port=22
