--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>140</version>
+		</dependency>
 	</dependencies>
 
 	<build>
