--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,12 @@
 			<version>1.46</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1.1-jre</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
