--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ evs.pa.ftp.port=22
 evs.pa.ftp.username=henry
 evs.pa.ftp.password=P0wer!2
 
+#Meter MQTT
+evs.meter.subscribe.send.topic=Meter/Grp30/req
+evs.meter.subscribe.resp.topic=Meter/Grp30/resp
+evs.meter.mqtt.address=ssl://3.1.87.138:8883
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://172.32.31.82:5432/pa_evs_db
 spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db
