--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
+#S3
+s3.bucket.name=evs-bk
+s3.access.id=/JUFAe7YUnMayoFP2H381wfgRSsh/tFTWe6STkfw
+s3.access.key=AKIA4IOZ5QWMWTS6EW5O
+
 #JWT
 jwt.header=Authorization
 jwt.secret=chatbot706280
