update after testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ pwd=$2a$10$kS39QEY4CBhMPfH3UL3ZWOt/5OsDKLvk07/a5nlCnQy9JIxE7KajS
 portal.pa.ca.request.url=http://54.254.171.4:8880/api/evs-ca-request
 
 server.port=7770
+
+evs.pa.validateSign=false
