--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 #S3
+s3.endpointUrl: https://s3.ap-southeast-1.amazonaws.com
 s3.bucket.name=powerautomation-esim
 s3.access.id=AKIA5FJTG4T6ZDPEV2BF
 s3.access.key=TibawYe6iwYdd+HfDr0nr1u3V5f0SjUl47VspU2a
