Update for evs-meter-client

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,6 +17,8 @@ evs.pa.ftp.password=P0wer!2
 #Meter MQTT
 evs.meter.subscribe.send.topic=dev/Meter/Grp30/req
 evs.meter.subscribe.resp.topic=dev/Meter/Grp30/resp
+evs.meter.local.subscribe.send.topic=dev/evs/pa/local/req
+evs.meter.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.meter.mqtt.address=ssl://3.1.87.138:8883
 
 spring.datasource.driver-class-name=org.postgresql.Driver
