--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ evs.pa.mqtt.client.id=dev-be-server
 evs.pa.mqtt.publish.topic.alias=dev/evs/pa/
 evs.pa.subscribe.send.topic=dev/evs/pa/data
 evs.pa.subscribe.resp.topic=dev/evs/pa/resp
+evs.pa.local.subscribe.send.topic=dev/evs/pa/local/req
+evs.pa.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.pa.privatekey.path=D://server.key
 evs.pa.master.privatekey.path=D://server_master.key
 evs.pa.csr.folder=D://evs-data//OUT_CSR//
@@ -17,8 +19,6 @@ evs.pa.ftp.password=P0wer!2
 #Meter MQTT
 evs.meter.subscribe.send.topic=dev/Meter/Grp30/req
 evs.meter.subscribe.resp.topic=dev/Meter/Grp30/resp
-evs.meter.local.subscribe.send.topic=dev/evs/pa/local/req
-evs.meter.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.meter.mqtt.address=ssl://3.1.87.138:8883
 
 spring.datasource.driver-class-name=org.postgresql.Driver
