--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,8 @@ evs.pa.mqtt.client.id=be-server
 evs.pa.mqtt.publish.topic.alias=evs/pa/
 evs.pa.subscribe.send.topic=evs/pa/data
 evs.pa.subscribe.resp.topic=evs/pa/resp
+evs.pa.local.subscribe.send.topic=evs/pa/local/req
+evs.pa.local.subscribe.resp.topic=evs/pa/local/resp
 evs.pa.privatekey.path=/home/henry/server/server.key
 evs.pa.master.privatekey.path=/home/henry/server/server_master.key
 evs.pa.csr.folder=/home/evs-data/OUT_CSR/
