--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,8 @@ evs.pa.subscribe.send.topic=evs/pa/data
 evs.pa.subscribe.resp.topic=evs/pa/resp
 evs.pa.local.subscribe.send.topic=evs/pa/local/req
 evs.pa.local.subscribe.resp.topic=evs/pa/local/resp
+evs.pa.local.data.send.topic=evs/pa/local/data/send
+evs.pa.local.data.resp.topic=evs/pa/local/data/resp
 evs.pa.privatekey.path=/home/henry/server/server.key
 evs.pa.master.privatekey.path=/home/henry/server/server_master.key
 evs.pa.csr.folder=/home/evs-data/OUT_CSR/
