--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ evs.pa.subscribe.resp.topic=evs/pa/resp
 evs.pa.local.subscribe.send.topic=evs/pa/local/req
 evs.pa.local.subscribe.resp.topic=evs/pa/local/resp
 evs.pa.local.data.send.topic=evs/pa/local/data/send
-evs.pa.local.data.resp.topic=evs/pa/local/data/resp
+#evs.pa.local.data.resp.topic=evs/pa/local/data/resp
 evs.pa.privatekey.path=/home/henry/server/server.key
 evs.pa.master.privatekey.path=/home/henry/server/server_master.key
 evs.pa.csr.folder=/home/evs-data/OUT_CSR/
