--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ evs.pa.subscribe.resp.topic=dev/evs/pa/resp
 evs.pa.local.subscribe.send.topic=dev/evs/pa/local/req
 evs.pa.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.pa.local.data.send.topic=dev/evs/pa/local/data/send
-evs.pa.local.data.resp.topic=dev/evs/pa/local/data/resp
+#evs.pa.local.data.resp.topic=dev/evs/pa/local/data/resp
 evs.pa.privatekey.path=D://server.key
 evs.pa.master.privatekey.path=D://server_master.key
 evs.pa.csr.folder=D://evs-data//OUT_CSR//
