--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.4</version><!--$NO-MVN-MAN-VER$ -->
