--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,9 +14,9 @@ evs.pa.master.privatekey.path=D://server_master.key
 evs.pa.csr.folder=D://evs-data//OUT_CSR//
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db
+spring.datasource.url=jdbc:postgresql://localhost:6666/pa_evs_db
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=P0wer!2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
