--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,6 +13,8 @@ evs.pa.privatekey.path=/home/henry/server/server.key
 evs.pa.master.privatekey.path=/home/henry/server/server_master.key
 evs.pa.csr.folder=/home/evs-data/OUT_CSR/
 
+evs.pa.report.jasperDir=/home/evs-data/report
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db
 spring.datasource.username=postgres
