--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ evs.pa.privatekey.path=D://server.key
 evs.pa.master.privatekey.path=D://server_master.key
 evs.pa.csr.folder=D://evs-data//OUT_CSR//
 
-evs.pa.report.jasperDir=D://evs-data//report
+evs.pa.report.jasperDir=/evs-data/report
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db
