--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ pwd=$2a$10$kS39QEY4CBhMPfH3UL3ZWOt/5OsDKLvk07/a5nlCnQy9JIxE7KajS
 
 portal.pa.ca.request.url=http://13.228.16.206:8880/api/evs-ca-request
 server.port=7770
+
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
