--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,11 +16,11 @@ evs.pa.csr.folder=D://evs-data//OUT_CSR//
 evs.pa.report.jasperDir=/evs-data/report
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
+spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
-spring.datasource.password=P0wer!2
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
