--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.profiles.active=dev
 s3.bucket.name=powerautomation-esim
 s3.photo.bucket.name=powerautomation-esim/mms-photo
 s3.p1.provisioning.bucket.name=powerautomation-esim/mms-p1-pdf
+s3.device.settings.bucket.name=powerautomation-esim/mms-device-settings
 s3.access.id=AKIA5FJTG4T6ZDPEV2BF
 s3.access.key=TibawYe6iwYdd+HfDr0nr1u3V5f0SjUl47VspU2a
 #in minutes
