--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #EVS
-evs.pa.data.folder=D://evs-data
+evs.pa.data.folder=/evs-data
 evs.pa.mqtt.address=ssl://3.1.87.138:8883
 evs.pa.mqtt.client.id=dev-be-server
 evs.pa.mqtt.publish.topic.alias=dev/evs/pa/
@@ -9,18 +9,25 @@ evs.pa.local.subscribe.send.topic=dev/evs/pa/local/req
 evs.pa.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.pa.local.data.send.topic=dev/evs/pa/local/data/send
 #evs.pa.local.data.resp.topic=dev/evs/pa/local/data/resp
-evs.pa.privatekey.path=D://server.key
-evs.pa.master.privatekey.path=D://server_master.key
-evs.pa.csr.folder=D://evs-data//OUT_CSR//
+evs.pa.privatekey.path=/server.key
+evs.pa.master.privatekey.path=/server_master.key
+evs.pa.csr.folder=/evs-data/OUT_CSR/
 
 evs.pa.report.jasperDir=/evs-data/report
 
+#Starfish
+starfish.ca-request.userId=33
+starfish.ca-request.certProfileId=5
+starfish.ca-request.caId=9
+starfish.ca-request.url=https://starfishdemo.local:8443/starfish/certificateRequest
+
+#Db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
 spring.datasource.password=P0wer!2
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
