--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,7 +27,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
 spring.datasource.password=P0wer!2
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = com.pa.evs.utils.PostgresDuplicationAwareDialect
 spring.jpa.properties.hibernate.default_schema=pa_evs_db
