https://powerautomationsg.atlassian.net/browse/LOCKS-46

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,9 +24,9 @@ starfish.ca-request.url=https://starfishdemo.local:8443/starfish/certificateRequ
 
 #Db
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
+spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
-spring.datasource.password=P0wer!2
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = com.pa.evs.utils.PostgresDuplicationAwareDialect
@@ -34,3 +34,8 @@ spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 evs.pa.validateSign=false
+
+#Create NUS Access Permisison Information
+evs.nus.refresh.token=1//0gB9Ww2AQYhpkCgYIARAAGBASNwF-L9Irt3rFNSpgJyQwZ8PcAF6Apipk-jeaCWxeAMkRJKlB4V5EkNj4b89VsiclHrjCvaU6Sao
+evs.nus.client.id=849368112495-v8ev9fnb7i99ss7r9sse3duer8s8a31h.apps.googleusercontent.com
+evs.nus.client.secret=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
