--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -26,3 +26,8 @@ spring.jpa.properties.hibernate.default_schema=pa_evs_db
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 evs.pa.validateSign=true
+
+#Create NUS Access Permisison Information
+evs.nus.refresh.token=1//0gB9Ww2AQYhpkCgYIARAAGBASNwF-L9Irt3rFNSpgJyQwZ8PcAF6Apipk-jeaCWxeAMkRJKlB4V5EkNj4b89VsiclHrjCvaU6Sao
+evs.nus.client.id=849368112495-v8ev9fnb7i99ss7r9sse3duer8s8a31h.apps.googleusercontent.com
+evs.nus.client.secret=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
