--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,9 +24,9 @@ starfish.ca-request.url=https://starfishdemo.local:8443/starfish/certificateRequ
 
 #Db
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db?sslmode=disable
+spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=P0wer!2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = com.pa.evs.utils.PostgresDuplicationAwareDialect
