--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,9 +24,9 @@ starfish.ca-request.url=https://starfishdemo.local:8443/starfish/certificateRequ
 
 #Db
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1111/pa_evs_db?sslmode=disable
+spring.datasource.url=jdbc:postgresql://localhost:5432/pa_evs_db?sslmode=disable
 spring.datasource.username=postgres
-spring.datasource.password=P0wer!2
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = com.pa.evs.utils.PostgresDuplicationAwareDialect
@@ -36,6 +36,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.Sec
 evs.pa.validateSign=false
 
 #Create NUS Access Permisison Information
-evs.nus.refresh.token=1//0gB9Ww2AQYhpkCgYIARAAGBASNwF-L9Irt3rFNSpgJyQwZ8PcAF6Apipk-jeaCWxeAMkRJKlB4V5EkNj4b89VsiclHrjCvaU6Sao
-evs.nus.client.id=849368112495-v8ev9fnb7i99ss7r9sse3duer8s8a31h.apps.googleusercontent.com
-evs.nus.client.secret=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
+evs.nus.refresh.token=1//0gkBp1sL2lvBACgYIARAAGBASNwF-L9Ir5TplE_AGotbIpOez251fKNcI5c_jOnV3QeJw3YFR7Kkbzq-jp0D1K_RKdet80o4jdoU
+evs.nus.client.id=785436878394-vvlkuburh2jsfbcm2mk25urtj675lpau.apps.googleusercontent.com
+evs.nus.client.secret=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
+evs.nus.callback=http://localhost:8080/callback
