--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,6 +28,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.Sec
 evs.pa.validateSign=true
 
 #Create NUS Access Permisison Information
-evs.nus.refresh.token=1//0gB9Ww2AQYhpkCgYIARAAGBASNwF-L9Irt3rFNSpgJyQwZ8PcAF6Apipk-jeaCWxeAMkRJKlB4V5EkNj4b89VsiclHrjCvaU6Sao
-evs.nus.client.id=849368112495-v8ev9fnb7i99ss7r9sse3duer8s8a31h.apps.googleusercontent.com
-evs.nus.client.secret=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
+evs.nus.refresh.token=1//0gkBp1sL2lvBACgYIARAAGBASNwF-L9Ir5TplE_AGotbIpOez251fKNcI5c_jOnV3QeJw3YFR7Kkbzq-jp0D1K_RKdet80o4jdoU
+evs.nus.client.id=785436878394-vvlkuburh2jsfbcm2mk25urtj675lpau.apps.googleusercontent.com
+evs.nus.client.secret=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
+evs.nus.callback=http://localhost:8080/callback
