--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ evs.pa.mqtt.client.id=dev-be-server
 evs.pa.mqtt.publish.topic.alias=dev/evs/pa/
 evs.pa.subscribe.send.topic=dev/evs/pa/data
 evs.pa.subscribe.resp.topic=dev/evs/pa/resp
+evs.pa.mqtt.health.check.subscribe.req.topic=dev/evs/pa/MMS/MQTTBroker/req
+evs.pa.mqtt.health.check.subscribe.resp.topic=dev/evs/pa/MMS/MQTTBroker/resp
 evs.pa.local.subscribe.send.topic=dev/evs/pa/local/req
 evs.pa.local.subscribe.resp.topic=dev/evs/pa/local/resp
 evs.pa.local.data.send.topic=dev/evs/pa/local/data/send
