--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ bin/
 dev-be-server*
 *-tcp*
 *-ssl*
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
